--- a/package.json
+++ b/package.json
@@ -9,9 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/material": "^5.12.1",
+    "js-file-download": "^0.4.12",
     "next": "13.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-bootstrap": "^2.7.4",
+    "react-dom": "18.2.0",
+    "react-faq-component": "^1.3.4",
+    "react-material-ui-carousel": "^3.4.2",
+    "react-photo-album": "^2.1.0"
   },
   "devDependencies": {
     "eslint": "8.38.0",
